assets/css/style.css
/* Table of Contents */

/* 01. Fonts */
/* 02. Common Styles */
/* 03. Animations */
/* 04. Hero */
/* 05. Buttons */
/* 06. Navigation - Sidebar */
/* 07. Featured Projects */
/*  07.1 Slider */
/* 08. About */
/* 09. Contact */
/* 10. Media Queries */

/* 01. Fonts */

@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700;900&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,900&;display=swap');

/* 02. Common Styles */

* {
  margin: 0;
  padding: 0;
  border: none;
}

body {
  font-weight: 400;
  font-size: 13px;
  height: 100%;
  text-align: center;
  background: #2D2D32;
  color: #000;
  font-family: 'Titillium Web', sans-serif;
}

html {
  height: 100%;
  scroll-behavior: smooth;
}

.highlight {
  color: #FF7F7F;
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
}

.container {
  position: relative;
  padding: 0 clamp(1.5rem, 6%, 4rem);
}

.body-content {
  position: relative;
  z-index: 5;
}

.flex {
  display: flex;
  justify-content: center;
}

/* 03. Animations */

.reveal-text {
  position: relative;
  animation-name: reveal-text;
  cursor: default;
  width: fit-content;
}

.reveal-text:after {
  content: "";
  position: absolute;
  z-index: 10;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #fff;
  transform: scaleX(0);
  transform-origin: 0 50%;
  pointer-events: none;
  animation-name: revealer-text;
}

.reveal-text,
.reveal-text:after {
  animation-delay: 0.5s;
  animation-iteration-count: 1;
  animation-duration: 800ms;
  animation-fill-mode: both;
  animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
}

.reveal-text:nth-child(2),
.reveal-text:nth-child(2):after {
  animation-delay: 0.75s;
}

.reveal-text:nth-child(3),
.reveal-text:nth-child(3):after {
  animation-delay: 1s;
}

.reveal-text:nth-child(4),
.reveal-text:nth-child(4):after {
  animation-delay: 1.25s;
}

.reveal-text:nth-child(5),
.reveal-text:nth-child(5):after {
  animation-delay: 1.5s;
}

@keyframes reveal-text {
  from {
    clip-path: inset(0 100% 0 0);
  }
  to {
    clip-path: inset(0 0 0 0);
  }
}

@keyframes revealer-text {
  0%, 50% {
    transform-origin: 0 50%;
  }
  60%, 100% {
    transform-origin: 100% 50%;
  }
  60% {
    transform: scaleX(1);
  }
  100% {
    transform: scaleX(0);
  }
}

#sidebar,
#sidebar::before {
  animation-duration: 1s;
  animation-fill-mode: both;
  animation-name: fadeInLeft;
}

@keyframes fadeInTop {
  from {
    opacity:0;
    top: -5%;
  }
  to {
    opacity:1;
    top: 0%;
  }
}

@keyframes fadeInLeft {
  from {
    opacity:0;
    left: -5%;
  }
  to {
    opacity:1;
    left: 0%;
  }
}

@keyframes fadeIn {
  0% {
    opacity:0
  }
  to {
    opacity:1
  }
}

/* 04. Hero */

.hero-section {
  display: grid;
  place-items: center;
  width: 100%;
  height: 100vh;
  overflow: hidden;
  position: relative;
  z-index: 4;
  background: #2A2A2E;
  box-sizing: border-box;
  padding-left: 80px;
}

.hero-title {
  display: flex;
  flex-direction: column;
  align-self: center;
  z-index: 10;
}

.hero-title:before {
  content: '';
  position: absolute;
  top: -30px;
  width: 50px;
  height: 4px;
  border: 1px solid rgba(255, 255, 255, 0.21);
  animation-name: fadeIn;
  animation-duration: 1s;
}

.hero-title h1 {
  color: #fff;
  font-family: 'Poppins', sans-serif;
  font-size: clamp(1.25rem, 0.65rem + 3.45vw, 3.13rem);
  text-align: left;
  font-weight: 600;
  line-height: 70px;
  margin-bottom: 7.5px;
  position: relative;
}

.hero-title h1:nth-child(3) {
  margin-bottom: 30px;
}

.hero-title h4 {
  width: min-content;
  white-space: nowrap;
  padding: 15px 30px;
  background: rgba(0, 0, 0, 0.21);
  text-align: left;
  font-size: 11px;
  text-transform: uppercase;
  color: rgba(255, 255, 255, 0.71);
  letter-spacing: 6px;
  font-weight: 600;
}

.hero-title .btn {
  margin-top: 50px;
}

.hero-location {
  display: flex;
  position: absolute;
  z-index: 20;
  left: 40%;
  top: 40px;
  left: 50%;
  transform: translate(-50%, 0);
  padding-left: 80px;
  cursor: pointer;
  overflow: hidden;
  animation-name: fadeIn;
  animation-duration: 1s;
}

.hero-location::before {
  content: '';
  position: absolute;
  top: 50%;
  left: 20px;
  width: 20px;
  height: 1px;
  background: #FF7F7F;
}

.hero-location span {
  margin-right: 60px;
  position: relative;
  top: 0;
}

.hero-location span:nth-child(2) {
  margin-right: 0;
}

.hero-location span,
.hover-location {
  -webkit-transition: all 200ms linear;
  transition: all 200ms linear;
  color: rgba(255, 255, 255, 0.51);
  letter-spacing: 10px;
  font-size: 10px;
  text-transform: uppercase;
}

.hero-location:hover span {
  top: 50px;
  opacity: 0;
  visibility: hidden;
}

.hover-location {
  position: absolute;
  left: 80px;
  top: -40px;
  opacity: 0;
  visibility: hidden;
}

.hero-location:hover .hover-location {
  top: 0;
  opacity: 1;
  visibility: visible;
}

#hero-container {
  display: flex;
  align-items: center;
  position: relative;
  margin-right: 100px;
}

#hero-container .hero-logo {
  position: absolute;
  top: 32%;
  left: 97.5%;
  transform: translate(-50%, -50%);
  height: 640px;
  width: 480px;
  background: #8A4D4D;
  opacity: 0.7;
  animation: clip-animation 1.35s cubic-bezier(0.34, 1.3, 0.7, 1);
    animation-delay: 0s;
  animation-delay: 1.4s;
  animation-fill-mode: forwards;
  -webkit-  clip-path: polygon(
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%);
  clip-path: polygon(
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%);
}

#pagination {
  display: flex;
  width: 28px;
  height: 80px;
  position: fixed;
  top: 50%;
  transform: translateY(-50%);
  align-items: flex-start;
  justify-content: inherit;
  flex-direction: column;
  flex-wrap: wrap;
  animation-name: fadeIn;
  animation-duration: 1s;
  z-index: 101;
}
/* ... */

